# ReosProject

./: .README.md.kate-swp  .gitignore  CITATION.cff  CMakeLists.txt  CTestConfig.cmake  ConfigQgis.pri  ECWLicense.txt  INSTALL.md  LICENSE_LEKAN.txt  LICENSE_MESHER.txt  Lekan.pro  MRSIDLicense.txt  QWT.pri  README.md  allLicences.txt  changelog  config.pri  reos_ts.pro
Tests/: CMakeLists.txt  GTestCMakeLists.in  ReosTest.pro  reos_testutils.cpp  reos_testutils.h
Tests/MesherTest/: MesherTest.pro  gtest_dependency.pri  main.cpp  tst_001_hdmeshgenerator.h  tst_001_meshgenerator.cpp  tst_002_00_mesheseditortest.cpp  tst_002_01_vertexzvalueediting.cpp  tst_002_hdmesheseditortest.h  tst_003_meshergeneratorprovidertest.cpp  tst_003_meshergeneratorprovidertest.h  tst_004_editablemeshlayertest.cpp  tst_004_hdeditablemeshlayertest.h  tst_005_hdmapmeshitemtest.h  tst_005_hdtineditorgraphictest.h  tst_005_tineditorgraphictest.cpp  tst_006_hdmapmeshitemtest.h  tst_006_hdtineditorgraphictest.h  tst_006_mapmeshitemtest.cpp  tst_meshgeneratortest.h
Tests/core/: CMakeLists.txt  reos_data_test.cpp  reos_dem_test.cpp  reos_geometry_test.cpp  reos_hydraulic_network_test.cpp  reos_hydraulic_structure_2D_test.cpp  reos_hydrograph_transfer_test.cpp  reos_mesh_test.cpp  reos_rainfall_test.cpp  reos_watershed_test.cpp
Tests/dataProviders/: CMakeLists.txt
Tests/gui/: CMakeLists.txt
Tests/python/: CMakeLists.txt  es.py  reos_test_python.cpp  test_structure2d.py  test_utils.py
Tests/simulationEngines/: CMakeLists.txt
Tests/src/: main.cpp  reos_testutils.cpp  reos_testutils.h
Tests/testData/: DEM_for_multi_watershed.tif  DEM_for_multi_watershed.tif.aux.xml  DEM_for_watershed.tif  DEM_for_watershed.tif.aux.xml  burning_lines.gpkg  dem_for_mesh.tif  dem_for_mesh.tif.aux.xml  filledDem.tiff  filledDem.tiff.aux.xml  filledDemDir.tiff  filledDemDir_expected.tiff  planDEM1_dem_expected.tiff  planDEM1_expected.tiff  rainfallData.rrf  rainfallData_before-2-2.rrf  rasterForTrace.tif  tmprainfallFile  tmprainfallFile.bck  tmprainfallFile.rrf  tmprainfallFile.rrf.bck  watershed.tiff
TestsHecRas/: CMakeLists.txt  test_hecras.cpp
TestsHecRas/testData/: tmpdss_file_0.dss
i18n/: CMakeLists.txt  hydro_en.ts  reos_ar.qm  reos_ar.ts  reos_el.ts  reos_en.qm  reos_en.ts  reos_es.qm  reos_es.ts  reos_fa.ts  reos_fa_IR.ts  reos_fr.qm  reos_fr.ts  reos_it.qm  reos_it.ts  reos_ne.qm  reos_ne.ts  reos_pt.qm  reos_pt.ts  reos_zh_TW.qm  reos_zh_TW.ts
python/: CMakeLists.txt  __init__.py  sipify.yaml
python/PyQt/: CMakeLists.txt
python/core/: __init__.py.in  core.sip.in  core_auto.sip  project.py.in  pyproject.toml.in
src/: CMakeLists.txt
src/GIS/: hdgismanager.h  hdrasterlayerpropertiesdialog.ui  hdvectorlayerpropertiesdialog.ui  qgslabelingwidget.cpp  qgslabelingwidget.h
src/LEKAN/: lekanmainwindow.cpp  lekanmainwindow.h  main.cpp
src/Mesher/: Mesher.pro  configCGAL.pri  main.cpp  mainwindow.cpp
src/Reos/: reosdialogbox.cpp  reosencodedelement.cpp  reosencodedelement.h  reossettings.cpp
src/UtilsGeometry/: utilsgeometry2d.cpp  utilsgeometry2d.h
src/core/: .CMakeLists.txt.kate-swp  CMakeLists.txt  reos_sip.h  reosapplication.cpp  reosapplication.h  reoscalculationcontext.cpp  reoscalculationcontext.h  reoscore.h  reoscoremodule.cpp  reoscoremodule.h  reosdocumentation.cpp  reosdocumentation.h  reosencodedelement.cpp  reosencodedelement.h  reosexception.cpp  reosexception.h  reosmemoryraster.cpp  reosmemoryraster.h  reosmodule.cpp  reosmodule.h  reosparameter.cpp  reosparameter.h  reosprocess.cpp  reosprocess.h  reosremoteinformation.cpp  reosremoteinformation.h  reossettings.cpp  reossettings.h  reosstyleregistery.cpp  reosstyleregistery.h  reosversion.cpp  reosversion.h
src/dataProviders/: CMakeLists.txt
src/gui/: CMakeLists.txt  reosaboutwidget.cpp  reosaboutwidget.h  reosactionwidget.cpp  reosactionwidget.h  reoscolorbutton.cpp  reoscolorbutton.h  reosdockwidget.cpp  reosdockwidget.h  reosgui.h  reosguicontext.cpp  reosguicontext.h  reoslanguageselectionwidget.cpp  reoslanguageselectionwidget.h  reosmainwindow.cpp  reosmainwindow.h  reosmenupopulator.cpp  reosmenupopulator.h  reosmessagebox.cpp  reosmessagebox.h  reosnotificationbutton.cpp  reosnotificationbutton.h  reosoverridecursor.cpp  reosoverridecursor.h  reosprocesscontroler.cpp  reosprocesscontroler.h  reosspeedwidget.cpp  reosspeedwidget.h  reosstartingwidget.cpp  reosstartingwidget.h  reosversionmessagebox.cpp  reosversionmessagebox.h
src/lekan/: CMakeLists.txt  lekan.rc  lekanmainwindow.cpp  lekanmainwindow.h  lekanmainwindow.ui  main.cpp
src/python/: CMakeLists.txt  reos_python.h  reospython.cpp  reospython.h
src/qgisPlugin/: CMakeLists.txt  reosqgisplugin.cpp  reosqgisplugin.h
src/reosSystem/: CMakeLists.txt  main.cpp
src/simulationEngines/: CMakeLists.txt
src/tools/: CMakeLists.txt  reos_tools.h
src/ui/: CMakeLists.txt  reos3dview.ui  reosaboutwidget.ui  reosaddhydrographnodefromwidget.ui  reoschartwidget.ui  reosconcentrationtimewidget.ui  reosdelftfewssettingswidget.ui  reosdelftfewswidget.ui  reosdelineatingwatershedfromdemwidget.ui  reosdelineatingwatershedwidget.ui  reosedithydraulicstructure2dwidget.ui  reoseditmeshelementwidget.ui  reoseditpolylinestructurewidget.ui  reoseditstructure2dwidget.ui  reoseditstructuregeometry2dwidget.ui  reosexportwatershedtovectordialog.ui  reosgaugedhydrographwidget.ui  reosgmshresolutioncontroller.ui  reosgribprecipitationwidget.ui  reosgriddedrainfallexportoptionswidget.ui  reosgriddedrainfallselectorwidget.ui  reoshubeausettingswidget.ui  reoshubeauwidget.ui  reoshydraulicelementpropertieswidget.ui  reoshydraulichydrographjunctionpropertieswidget.ui  reoshydraulicnetworkwidget.ui  reoshydraulicschemewidget.ui  reoshydraulicsimulationconsole.ui  reoshydraulicstructure2dproperties.ui  reoshydrographeditingwidget.ui  reoshydrographroutingpropertieswidget.ui  reosimportfromtextfile.ui  reosintensitydurationselectedcurvewidget.ui  reoslanguageselectionwidget.ui  reoslightwidget.ui  reoslongitudinalprofilewidget.ui  reosmainwindow.ui  reosmeshscalarrenderingwidget.ui  (+17 more)
(+2278 files in other folders)
