# Reos licence GPL version 2
# Copyright (C) 2020 Vincent Cloarec (vcloarec at gmail dot com)

CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

SET(CMAKE_AUTORCC ON)
PROJECT(Reos)

SET(CMAKE_AUTOMOC ON)

SET (CMAKE_CXX_STANDARD 11)
# set path to additional CMake modules
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

# global vars
SET (REOS_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/output CACHE PATH "Output base directory")
SET (ENABLE_TESTS TRUE CACHE BOOL "Build tests?")

FIND_PACKAGE(Qt5 COMPONENTS Core Gui Widgets Network Xml Svg Concurrent Test UiTools Sql REQUIRED)

SET(QGIS_LIB_PATH CACHE PATH "Path to the library of QGIS")
SET(QGIS_INCLUDE_DIR CACHE PATH "Path to the include dir of QGIS")
SET(QGIS_CORE_LIB CACHE FILEPATH "Path to QGIS core lib")
SET(QGIS_GUI_LIB CACHE FILEPATH "Path to QGIS gui lib")
SET(QGIS_LIBS ${QGIS_CORE_LIB} ${QGIS_GUI_LIB})

ADD_SUBDIRECTORY(images)
ADD_SUBDIRECTORY(src/core)
ADD_SUBDIRECTORY(src/gui)
ADD_SUBDIRECTORY(src/ui)
ADD_SUBDIRECTORY(src/tools)
ADD_SUBDIRECTORY(src/lekan)


# testing
IF (ENABLE_TESTS)
  INCLUDE (CTest)
  ADD_DEFINITIONS(-DENABLE_TESTS)
  ENABLE_TESTING()
  ADD_SUBDIRECTORY(Tests)
ENDIF(ENABLE_TESTS)
