ADD_SUBDIRECTORY(core)

IF(WITH_GUI)
    ADD_SUBDIRECTORY(ui)
    ADD_SUBDIRECTORY(gui)
    ADD_SUBDIRECTORY(lekan)
    ADD_SUBDIRECTORY(reosSystem)
ENDIF(WITH_GUI)

if (WITH_BINDINGS)
    ADD_SUBDIRECTORY(python)
endif()


ADD_SUBDIRECTORY(dataProviders)

IF(WITH_HYDRAULIC_MODEL_SUPPORT)
    ADD_SUBDIRECTORY(simulationEngines)
ENDIF(WITH_HYDRAULIC_MODEL_SUPPORT)


