# Reos licence GPL version 2
# Copyright (C) 2022 Vincent Cloarec (vcloarec at gmail dot com)

#########################################################################
#########################################################################

IF (ENABLE_HECRAS AND ENABLE_HEC_DSS)
	ADD_SUBDIRECTORY(hecras)
ENDIF(ENABLE_HECRAS AND ENABLE_HEC_DSS)
